@@ -1,4 +1,4 @@
-// Copyright 2000-2025 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
+// Copyright 2000-2026 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package org.intellij.lang.regexp.intention;
 
 import com.intellij.codeInsight.highlighting.HighlightManager;
@@ -14,7 +14,6 @@ import com.intellij.openapi.application.ApplicationManager;
 import com.intellij.openapi.application.ModalityState;
 import com.intellij.openapi.application.ReadAction;
 import com.intellij.openapi.diagnostic.Logger;
-import com.intellij.openapi.editor.Document;
 import com.intellij.openapi.editor.Editor;
 import com.intellij.openapi.editor.actions.IncrementalFindAction;
 import com.intellij.openapi.editor.event.CaretEvent;
@@ -23,7 +22,6 @@ import com.intellij.openapi.editor.event.DocumentEvent;
 import com.intellij.openapi.editor.event.DocumentListener;
 import com.intellij.openapi.editor.ex.EditorEx;
 import com.intellij.openapi.editor.markup.RangeHighlighter;
-import com.intellij.openapi.fileTypes.LanguageFileType;
 import com.intellij.openapi.fileTypes.PlainTextFileType;
 import com.intellij.openapi.progress.ProcessCanceledException;
 import com.intellij.openapi.project.Project;
@@ -34,8 +32,12 @@ import com.intellij.openapi.util.Key;
 import com.intellij.openapi.util.NlsContexts;
 import com.intellij.openapi.util.text.StringUtil;
 import com.intellij.openapi.wm.IdeFocusManager;
-import com.intellij.psi.*;
+import com.intellij.psi.PsiElement;
+import com.intellij.psi.PsiFile;
+import com.intellij.psi.PsiLanguageInjectionHost;
+import com.intellij.psi.SyntaxTraverser;
 import com.intellij.ui.EditorTextField;
+import com.intellij.ui.LanguageTextField;
 import com.intellij.ui.components.JBLabel;
 import com.intellij.ui.components.JBScrollBar;
 import com.intellij.ui.scale.JBUIScale;
@@ -44,15 +46,28 @@ import com.intellij.util.ObjectUtils;
 import com.intellij.util.SmartList;
 import com.intellij.util.ui.JBUI;
 import com.intellij.util.ui.UIUtil;
-import org.intellij.lang.regexp.*;
+import org.intellij.lang.regexp.RegExpBundle;
+import org.intellij.lang.regexp.RegExpHighlighter;
+import org.intellij.lang.regexp.RegExpMatch;
+import org.intellij.lang.regexp.RegExpMatchResult;
+import org.intellij.lang.regexp.RegExpMatcherProvider;
+import org.intellij.lang.regexp.RegExpModifierProvider;
 import org.intellij.lang.regexp.psi.RegExpGroup;
 import org.jetbrains.annotations.ApiStatus;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 import org.jetbrains.annotations.TestOnly;
 
-import javax.swing.*;
-import java.awt.*;
+import javax.swing.Icon;
+import javax.swing.JComponent;
+import javax.swing.JLabel;
+import javax.swing.JPanel;
+import javax.swing.JScrollBar;
+import javax.swing.JScrollPane;
+import javax.swing.ScrollPaneConstants;
+import java.awt.Dimension;
+import java.awt.GridBagConstraints;
+import java.awt.GridBagLayout;
 import java.awt.event.FocusAdapter;
 import java.awt.event.FocusEvent;
 import java.util.Collections;
@@ -88,18 +103,9 @@ public final class CheckRegExpForm {
 
   public CheckRegExpForm(@NotNull PsiFile regExpFile) {
     final Project project = regExpFile.getProject();
-    final Document document = PsiDocumentManager.getInstance(project).getDocument(regExpFile);
 
-    final Language language = regExpFile.getLanguage();
-    final LanguageFileType fileType;
-    if (language instanceof RegExpLanguage) {
-      fileType = RegExpLanguage.INSTANCE.getAssociatedFileType();
-    }
-    else {
-      // for correct syntax highlighting
-      fileType = RegExpFileType.forLanguage(language);
-    }
-    myRegExp = new EditorTextField(document, project, fileType, false, false) {
+    LanguageTextField.DocumentCreator documentProvider = (value, language, project1) -> regExpFile.getViewProvider().getDocument();
+    myRegExp = new LanguageTextField(regExpFile.getLanguage(), project, regExpFile.getText(), documentProvider, false) {
       private final Disposable disposable = Disposer.newDisposable();
 
       @Override
@@ -207,8 +213,7 @@ public final class CheckRegExpForm {
       public void focusGained(FocusEvent e) {
         final Editor editor = mySampleText.getEditor();
         if (editor == null) return;
-        final int offset = editor.getCaretModel().getOffset();
-        highlightSampleGroup(offset, regExpFile);
+        highlightSampleGroup(editor.getCaretModel().getOffset(), regExpFile);
       }
     });
 
@@ -300,37 +305,41 @@ public final class CheckRegExpForm {
   }
 
   private void highlightSampleGroup(int offset, @NotNull PsiFile regExpFile) {
-    final HighlightManager highlightManager = HighlightManager.getInstance(regExpFile.getProject());
-    removeHighlights(highlightManager);
+    ReadAction.run(() -> {
+      final HighlightManager highlightManager = HighlightManager.getInstance(regExpFile.getProject());
+      removeHighlights(highlightManager);
 
-    final List<RegExpMatch> matches = getMatches(regExpFile);
-    int index = indexOfGroupAtOffset(matches, offset);
-    if (index > 0) {
-      @Nullable RegExpGroup group =
-        SyntaxTraverser.psiTraverser(regExpFile)
-          .filter(RegExpGroup.class)
-          .filter(RegExpGroup::isCapturing)
-          .get(index - 1);
-      highlightRegExpGroup(group, highlightManager);
-      highlightMatchGroup(highlightManager, matches, index);
-    }
-    else {
-      highlightMatchGroup(highlightManager, matches, 0);
-    }
+      final List<RegExpMatch> matches = getMatches(regExpFile);
+      int index = indexOfGroupAtOffset(matches, offset);
+      if (index > 0) {
+        @Nullable RegExpGroup group =
+          SyntaxTraverser.psiTraverser(regExpFile)
+            .filter(RegExpGroup.class)
+            .filter(RegExpGroup::isCapturing)
+            .get(index - 1);
+        highlightRegExpGroup(group, highlightManager);
+        highlightMatchGroup(highlightManager, matches, index);
+      }
+      else {
+        highlightMatchGroup(highlightManager, matches, 0);
+      }
+    });
   }
 
   private void highlightRegExpGroup(int offset, @NotNull PsiFile regExpFile) {
-    final RegExpGroup group = findCapturingGroupAtOffset(regExpFile, offset);
-    final HighlightManager highlightManager = HighlightManager.getInstance(regExpFile.getProject());
-    removeHighlights(highlightManager);
-    if (group != null) {
-      final int index = SyntaxTraverser.psiTraverser(regExpFile).filter(RegExpGroup.class).indexOf(e -> e == group) + 1;
-      highlightRegExpGroup(group, highlightManager);
-      highlightMatchGroup(highlightManager, getMatches(regExpFile), index);
-    }
-    else {
-      highlightMatchGroup(highlightManager, getMatches(regExpFile), 0);
-    }
+    ReadAction.run(() -> {
+      final RegExpGroup group = findCapturingGroupAtOffset(regExpFile, offset);
+      final HighlightManager highlightManager = HighlightManager.getInstance(regExpFile.getProject());
+      removeHighlights(highlightManager);
+      if (group != null) {
+        final int index = SyntaxTraverser.psiTraverser(regExpFile).filter(RegExpGroup.class).indexOf(e -> e == group) + 1;
+        highlightRegExpGroup(group, highlightManager);
+        highlightMatchGroup(highlightManager, getMatches(regExpFile), index);
+      }
+      else {
+        highlightMatchGroup(highlightManager, getMatches(regExpFile), 0);
+      }
+    });
   }
 
   private static int indexOfGroupAtOffset(List<RegExpMatch> matches, int offset) {
@@ -389,7 +398,7 @@ public final class CheckRegExpForm {
     final PsiElement[] array = {group};
     List<RangeHighlighter> highlighter = new SmartList<>();
     highlightManager.addOccurrenceHighlights(editor, array, RegExpHighlighter.MATCHED_GROUPS, true, highlighter);
-    myRegExpHighlight = highlighter.get(0);
+    myRegExpHighlight = highlighter.getFirst();
   }
 
   private void removeHighlights(HighlightManager highlightManager) {
