@@ -37,27 +37,124 @@ import com.intellij.openapi.projectRoots.JavaSdk;
 import com.intellij.openapi.projectRoots.JavaSdkVersion;
 import com.intellij.openapi.projectRoots.Sdk;
 import com.intellij.openapi.roots.ProjectFileIndex;
-import com.intellij.openapi.util.*;
+import com.intellij.openapi.util.Couple;
+import com.intellij.openapi.util.JDOMUtil;
+import com.intellij.openapi.util.NlsSafe;
+import com.intellij.openapi.util.Pair;
+import com.intellij.openapi.util.TextRange;
 import com.intellij.openapi.util.io.FileUtil;
 import com.intellij.openapi.util.text.HtmlBuilder;
 import com.intellij.openapi.util.text.HtmlChunk;
 import com.intellij.openapi.util.text.StringUtil;
+import com.intellij.openapi.util.text.Strings;
 import com.intellij.openapi.vfs.VfsUtilCore;
 import com.intellij.openapi.vfs.VirtualFile;
 import com.intellij.pom.java.LanguageLevel;
-import com.intellij.psi.*;
+import com.intellij.psi.CommonClassNames;
+import com.intellij.psi.JavaDirectoryService;
+import com.intellij.psi.JavaDocTokenType;
+import com.intellij.psi.JavaElementVisitor;
+import com.intellij.psi.JavaPsiFacade;
+import com.intellij.psi.JavaTokenType;
+import com.intellij.psi.PsiAnnotationOwner;
+import com.intellij.psi.PsiAnonymousClass;
+import com.intellij.psi.PsiArrayInitializerExpression;
+import com.intellij.psi.PsiArrayType;
+import com.intellij.psi.PsiCapturedWildcardType;
+import com.intellij.psi.PsiClass;
+import com.intellij.psi.PsiClassOwner;
+import com.intellij.psi.PsiClassType;
+import com.intellij.psi.PsiCompiledFile;
+import com.intellij.psi.PsiConstantEvaluationHelper;
+import com.intellij.psi.PsiDeconstructionList;
+import com.intellij.psi.PsiDeconstructionPattern;
+import com.intellij.psi.PsiDirectory;
+import com.intellij.psi.PsiDisjunctionType;
+import com.intellij.psi.PsiDocCommentOwner;
+import com.intellij.psi.PsiElement;
+import com.intellij.psi.PsiElementFactory;
+import com.intellij.psi.PsiEllipsisType;
+import com.intellij.psi.PsiEnumConstant;
+import com.intellij.psi.PsiExpression;
+import com.intellij.psi.PsiExpressionList;
+import com.intellij.psi.PsiField;
+import com.intellij.psi.PsiFile;
+import com.intellij.psi.PsiFileFactory;
+import com.intellij.psi.PsiFileSystemItem;
+import com.intellij.psi.PsiIdentifier;
+import com.intellij.psi.PsiIntersectionType;
+import com.intellij.psi.PsiJavaCodeReferenceElement;
+import com.intellij.psi.PsiJavaDocumentedElement;
+import com.intellij.psi.PsiJavaFile;
+import com.intellij.psi.PsiJavaModule;
+import com.intellij.psi.PsiJavaModuleReference;
+import com.intellij.psi.PsiJavaModuleReferenceElement;
+import com.intellij.psi.PsiJavaToken;
+import com.intellij.psi.PsiKeyword;
+import com.intellij.psi.PsiLambdaExpression;
+import com.intellij.psi.PsiLiteralExpression;
+import com.intellij.psi.PsiManager;
+import com.intellij.psi.PsiMember;
+import com.intellij.psi.PsiMethod;
+import com.intellij.psi.PsiMethodCallExpression;
+import com.intellij.psi.PsiModifier;
+import com.intellij.psi.PsiModifierList;
+import com.intellij.psi.PsiModifierListOwner;
+import com.intellij.psi.PsiNamedElement;
+import com.intellij.psi.PsiNewExpression;
+import com.intellij.psi.PsiPackage;
+import com.intellij.psi.PsiPackageStatement;
+import com.intellij.psi.PsiParameter;
+import com.intellij.psi.PsiParameterList;
+import com.intellij.psi.PsiPattern;
+import com.intellij.psi.PsiPatternVariable;
+import com.intellij.psi.PsiPrefixExpression;
+import com.intellij.psi.PsiPrimitiveType;
+import com.intellij.psi.PsiRecordComponent;
+import com.intellij.psi.PsiRecordHeader;
+import com.intellij.psi.PsiRecursiveElementWalkingVisitor;
+import com.intellij.psi.PsiReference;
+import com.intellij.psi.PsiReferenceExpression;
+import com.intellij.psi.PsiSubstitutor;
+import com.intellij.psi.PsiType;
+import com.intellij.psi.PsiTypeElement;
+import com.intellij.psi.PsiTypeParameter;
+import com.intellij.psi.PsiTypeParameterListOwner;
+import com.intellij.psi.PsiVariable;
+import com.intellij.psi.PsiWhiteSpace;
+import com.intellij.psi.PsiWildcardType;
+import com.intellij.psi.SyntaxTraverser;
 import com.intellij.psi.impl.JavaConstantExpressionEvaluator;
+import com.intellij.psi.impl.source.javadoc.PsiDocFormatString;
 import com.intellij.psi.impl.source.javadoc.PsiDocMethodOrFieldRef;
 import com.intellij.psi.impl.source.javadoc.PsiSnippetDocTagImpl;
 import com.intellij.psi.impl.source.tree.ElementType;
 import com.intellij.psi.impl.source.tree.JavaDocElementType;
 import com.intellij.psi.impl.source.tree.JavaElementType;
+import com.intellij.psi.impl.source.tree.LeafPsiElement;
 import com.intellij.psi.impl.source.tree.TreeElement;
-import com.intellij.psi.javadoc.*;
+import com.intellij.psi.javadoc.PsiDocComment;
+import com.intellij.psi.javadoc.PsiDocFragmentRef;
+import com.intellij.psi.javadoc.PsiDocTag;
+import com.intellij.psi.javadoc.PsiDocTagValue;
+import com.intellij.psi.javadoc.PsiDocToken;
+import com.intellij.psi.javadoc.PsiInlineDocTag;
+import com.intellij.psi.javadoc.PsiMarkdownCodeBlock;
+import com.intellij.psi.javadoc.PsiMarkdownReferenceLabel;
+import com.intellij.psi.javadoc.PsiMarkdownReferenceLink;
+import com.intellij.psi.javadoc.PsiSnippetAttribute;
+import com.intellij.psi.javadoc.PsiSnippetAttributeList;
+import com.intellij.psi.javadoc.PsiSnippetAttributeValue;
+import com.intellij.psi.javadoc.PsiSnippetDocTagBody;
+import com.intellij.psi.javadoc.PsiSnippetDocTagValue;
 import com.intellij.psi.search.GlobalSearchScope;
 import com.intellij.psi.tree.IElementType;
 import com.intellij.psi.tree.TokenSet;
-import com.intellij.psi.util.*;
+import com.intellij.psi.util.PropertyUtil;
+import com.intellij.psi.util.PsiFormatUtil;
+import com.intellij.psi.util.PsiFormatUtilBase;
+import com.intellij.psi.util.PsiTreeUtil;
+import com.intellij.psi.util.PsiUtil;
 import com.intellij.psi.xml.XmlAttribute;
 import com.intellij.psi.xml.XmlAttributeValue;
 import com.intellij.psi.xml.XmlTag;
@@ -69,21 +166,39 @@ import com.intellij.util.containers.ContainerUtil;
 import kotlin.text.StringsKt;
 import org.jdom.Element;
 import org.jdom.JDOMException;
-import org.jetbrains.annotations.*;
+import org.jetbrains.annotations.ApiStatus;
+import org.jetbrains.annotations.Contract;
+import org.jetbrains.annotations.Nls;
+import org.jetbrains.annotations.NotNull;
+import org.jetbrains.annotations.Nullable;
 
-import java.awt.*;
+import java.awt.Color;
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collection;
+import java.util.Comparator;
+import java.util.HashSet;
 import java.util.List;
+import java.util.Locale;
+import java.util.Objects;
+import java.util.Set;
 import java.util.function.Predicate;
 import java.util.function.Supplier;
 import java.util.function.UnaryOperator;
 import java.util.regex.Pattern;
 
-import static com.intellij.codeInsight.javadoc.SnippetMarkup.*;
+import static com.intellij.codeInsight.javadoc.SnippetMarkup.ErrorMarkup;
+import static com.intellij.codeInsight.javadoc.SnippetMarkup.Highlight;
+import static com.intellij.codeInsight.javadoc.SnippetMarkup.Link;
+import static com.intellij.codeInsight.javadoc.SnippetMarkup.LinkType;
+import static com.intellij.codeInsight.javadoc.SnippetMarkup.LocationMarkupNode;
+import static com.intellij.codeInsight.javadoc.SnippetMarkup.PlainText;
+import static com.intellij.codeInsight.javadoc.SnippetMarkup.SnippetVisitor;
+import static com.intellij.codeInsight.javadoc.SnippetMarkup.fromElement;
 import static com.intellij.lang.documentation.DocumentationMarkup.BOTTOM_ELEMENT;
 import static com.intellij.lang.documentation.QuickDocHighlightingHelper.appendStyledCodeBlock;
 import static com.intellij.lang.documentation.QuickDocHighlightingHelper.appendStyledInlineCode;
@@ -638,7 +753,7 @@ public class JavaDocInfoGenerator {
     if (classComment == null) return null;
     PsiDocTag tag = getParamTagByName(classComment, recordComponentName);
     if (tag == null) return null;
-    PsiElement[] elements = tag.getDataElements();
+    PsiElement[] elements = dataElementWithSpaces(tag);
     if (elements.length == 0) return null;
     String text = elements[0].getText();
     StringBuilder buffer = new StringBuilder();
@@ -701,6 +816,10 @@ public class JavaDocInfoGenerator {
       case PsiJavaModule module -> generateModuleJavaDoc(buffer, module, true);
       // package-info case
       case PsiDocComment comment -> generatePackageJavaDoc(buffer, comment, true);
+      case PsiPackageStatement packageStatement -> {
+        PsiDocComment docComment = packageStatement.getDocComment();
+        if (docComment != null) generatePackageJavaDoc(buffer, docComment, true);
+      }
       case null, default -> {
         return null;
       }
@@ -939,7 +1058,7 @@ public class JavaDocInfoGenerator {
           buffer.append(NBSP);
         }
         else {
-          buffer.append('\n').append(NBSP.repeat(keyword.length() + 1));
+          buffer.append('\n').repeat(NBSP, keyword.length() + 1);
         }
       }
     }
@@ -1122,12 +1241,14 @@ public class JavaDocInfoGenerator {
   }
 
   private void generateDefaultPackageDoc(StringBuilder buffer, PsiPackage aPackage, boolean generatePrologue) {
+    PsiClass[] classes = aPackage.getClasses();
+    if (classes.length == 0) return;
     if (generatePrologue) generatePrologue(buffer);
     HtmlBuilder hb = new HtmlBuilder();
     hb.append(HtmlChunk.tag("h3").addText(JavaBundle.message("package.classes")));
     Comparator<PsiClass> comparator = Comparator.comparing(PsiClass::getName, Comparator.nullsLast(Comparator.naturalOrder()));
     Set<String> links = new HashSet<>();
-    Arrays.stream(aPackage.getClasses()).sorted(comparator).forEach(psiClass -> {
+    Arrays.stream(classes).sorted(comparator).forEach(psiClass -> {
       String link = generateLink(psiClass, psiClass.getName());
       if (link != null && links.add(link)) {
         hb.append(HtmlChunk.tag("div")
@@ -1298,7 +1419,7 @@ public class JavaDocInfoGenerator {
       }
       else {
         // initializer should be printed on the new line
-        buffer.append("\n").append(NBSP.repeat(CodeStyle.getIndentSize(variable.getContainingFile())));
+        buffer.append("\n").repeat(NBSP, CodeStyle.getIndentSize(variable.getContainingFile()));
       }
       appendStyledSpan(buffer, getHighlightingManager().getOperationSignAttributes(), "= ");
 
@@ -1450,7 +1571,7 @@ public class JavaDocInfoGenerator {
         if (parameter.getParent() == parameterList) {
           ParamInfo tagInfoProvider = findTagInfoProvider(parameter, method, parameterList);
           if (tagInfoProvider != null) {
-            PsiElement[] elements = tagInfoProvider.docTag.getDataElements();
+            PsiElement[] elements = dataElementWithSpaces(tagInfoProvider.docTag);
             if (elements.length == 0) return null;
             String text = elements[0].getText();
             StringBuilder buffer = new StringBuilder();
@@ -1791,7 +1912,7 @@ public class JavaDocInfoGenerator {
         if (htmlCodeBlockContents != null) {
           htmlCodeBlockContents.append(' ');
         }
-        else {
+        else if (!subBuffer.isEmpty() && !Strings.isWhiteSpace(subBuffer.charAt(subBuffer.length() - 1))) {
           subBuffer.append(' ');
         }
       }
@@ -1959,7 +2080,7 @@ public class JavaDocInfoGenerator {
     if (body != null) {
       List<Pair<PsiElement, TextRange>> files =
         InjectedLanguageManager.getInstance(snippetTag.getProject()).getInjectedPsiFiles(snippetTag);
-      PsiElement element = files != null ? files.get(0).first : null;
+      PsiElement element = files != null ? files.getFirst().first : null;
       buffer.append(preTag);
       generateSnippetBody(buffer, element != null ? element : body, region);
       buffer.append("</pre>");
@@ -2316,6 +2437,7 @@ public class JavaDocInfoGenerator {
 
   private void generateValueValue(PsiInlineDocTag tag, StringBuilder buffer, PsiElement element) {
     String text = getRefText(tag.getDataElements());
+    PsiDocFormatString formatString = PsiTreeUtil.findChildOfType(element, PsiDocFormatString.class);
     PsiField valueField = null;
     if (text.isEmpty()) {
       if (myElement instanceof PsiField) valueField = (PsiField)myElement;
@@ -2340,11 +2462,16 @@ public class JavaDocInfoGenerator {
     if (valueField != null) {
       PsiExpression initializer = valueField.getInitializer();
       value = DumbService.isDumb(myProject) ? null : JavaConstantExpressionEvaluator.computeConstantExpression(initializer, false);
+      if (formatString != null) {
+        value = String.format(formatString.getText(), value);
+      }
+      else if (value instanceof String) {
+        value = '"' + value.toString() + '"';
+      }
     }
 
     if (value != null) {
       String valueText = StringUtil.escapeXmlEntities(value.toString());
-      if (value instanceof String) valueText = '"' + valueText + '"';
       if (valueField.equals(myElement)) {
         buffer.append(valueText); // don't generate link to itself
       }
@@ -2411,6 +2538,11 @@ public class JavaDocInfoGenerator {
     element.accept(new PsiRecursiveElementWalkingVisitor() {
       @Override
       public void visitElement(@NotNull PsiElement element) {
+        if (element instanceof PsiInlineDocTag inlineDocTag) {
+          generateValue(buffer, new PsiElement[] {inlineDocTag}, ourEmptyElementsProvider);
+          return;
+        }
+
         super.visitElement(element);
         if (element instanceof PsiWhiteSpace ||
             element instanceof PsiJavaToken ||
@@ -2453,23 +2585,25 @@ public class JavaDocInfoGenerator {
     PsiDocTag[] tags = comment.findTagsByName("see");
     if (tags.length > 0) {
       startHeaderSection(buffer, JavaBundle.message("javadoc.see.also")).append("<p>");
+      StringBuilder subBuffer = new StringBuilder();
       for (int i = 0; i < tags.length; i++) {
         PsiDocTag tag = tags[i];
-        PsiElement[] elements = tag.getDataElements();
+        PsiElement[] elements = dataElementWithSpaces(tag);
         if (elements.length > 0) {
           PsiElement ref = getRefElement(elements);
           String linkLabel = getLinkLabel(elements, ref);
           if (StringUtil.startsWithChar(linkLabel, '<')) {
-            buffer.append(linkLabel);
+            subBuffer.append(linkLabel);
           }
           else if (StringUtil.startsWithChar(linkLabel, '"')) {
             appendPlainText(buffer, linkLabel);
           }
           else {
             boolean plain = hasLinkLabel(elements, ref);
-            generateLink(buffer, ref != null ? ref.getText() : tag.getText(), plain ? linkLabel : null, tag, plain);
+            generateLink(subBuffer, ref != null ? ref.getText() : tag.getText(), plain ? linkLabel : null, tag, plain);
           }
         }
+        flushSubBuffer(buffer, subBuffer, comment.isMarkdownComment());
         if (i < tags.length - 1) {
           buffer.append(",").append(BR_TAG);
         }
@@ -2559,7 +2693,7 @@ public class JavaDocInfoGenerator {
   }
 
   private String generateOneParameter(ParamInfo tag) {
-    PsiElement[] elements = tag.docTag.getDataElements();
+    PsiElement[] elements = dataElementWithSpaces(tag.docTag);
     if (elements.length == 0) return "";
     String text = elements[0].getText();
     StringBuilder buffer = new StringBuilder();
@@ -2592,7 +2726,7 @@ public class JavaDocInfoGenerator {
 
     if (docInfo != null && docInfo.element != null) {
       startHeaderSection(buffer, CodeInsightBundle.message("javadoc.returns")).append("<p>");
-      generateValue(buffer, docInfo.element.getDataElements(), mapProvider(docInfo.provider, false));
+      generateValue(buffer, dataElementWithSpaces(docInfo.element), mapProvider(docInfo.provider, false));
       buffer.append(DocumentationMarkup.SECTION_END);
     }
   }
@@ -2619,7 +2753,7 @@ public class JavaDocInfoGenerator {
     Set<String> documentedExceptions = new HashSet<>(throwsJavadocTags.length);
     for (PsiDocTag tag : throwsJavadocTags) {
       buffer.append("<p>");
-      PsiElement[] dataElements = tag.getDataElements();
+      PsiElement[] dataElements = dataElementWithSpaces(tag);
       if (dataElements.length == 0) continue;
       PsiElement child = dataElements[0].getFirstChild();
       if (child == null) continue;
@@ -3327,5 +3461,32 @@ public class JavaDocInfoGenerator {
 
   private enum SignaturePlace {
     Javadoc, ToolTip
+  }
+
+  /// Returns the tag data element with the **relevant** spaces included.
+  /// This function is useful to interact with non-inline tag content
+  static PsiElement[] dataElementWithSpaces(PsiDocTag tag) {
+    List<PsiElement> result = new ArrayList<>();
+    PsiElement[] dataElements = tag.getDataElements();
+    for (int i =0; i < dataElements.length; i++) {
+      PsiElement dataElement = dataElements[i];
+      result.add(dataElement);
+      PsiElement nextSibling = dataElement.getNextSibling();
+      if (i != dataElements.length - 1 
+          && dataElement.getNode().getElementType() == JavaDocTokenType.DOC_COMMENT_DATA 
+          && nextSibling instanceof PsiWhiteSpace
+          // Don't fetch next whitespace if the next data element is equivalent to one
+          && !(dataElements[i + 1] instanceof LeafPsiElement leaf && Strings.isEmptyOrSpaces(leaf.getChars()))) {
+        result.add(nextSibling);
+        
+        // Markdown comments interpret an empty line as a paragraph break
+        PsiElement newLineStart = nextSibling.getNextSibling();
+        if (newLineStart == null) continue;
+        PsiElement newLineContent =  newLineStart.getNextSibling();
+        if (!(newLineContent instanceof PsiWhiteSpace)) continue;
+        result.add(newLineContent);
+      }
+    }
+    return result.toArray(PsiElement.EMPTY_ARRAY);
   }
 }
