@@ -1,4 +1,4 @@
-// Copyright 2000-2025 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
+// Copyright 2000-2026 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.ide.util;
 
 import com.intellij.CommonBundle;
@@ -6,6 +6,7 @@ import com.intellij.history.LocalHistory;
 import com.intellij.history.LocalHistoryAction;
 import com.intellij.ide.DataManager;
 import com.intellij.ide.DeleteProvider;
+import com.intellij.ide.GeneralSettings;
 import com.intellij.ide.IdeBundle;
 import com.intellij.ide.actions.RevealFileAction;
 import com.intellij.lang.LangBundle;
@@ -20,7 +21,6 @@ import com.intellij.openapi.application.ApplicationNamesInfo;
 import com.intellij.openapi.command.CommandProcessor;
 import com.intellij.openapi.diagnostic.Logger;
 import com.intellij.openapi.fileEditor.impl.NonProjectFileWritingAccessProvider;
-import com.intellij.openapi.progress.ProcessCanceledException;
 import com.intellij.openapi.progress.ProgressIndicator;
 import com.intellij.openapi.progress.ProgressManager;
 import com.intellij.openapi.progress.Task;
@@ -31,12 +31,18 @@ import com.intellij.openapi.ui.Messages;
 import com.intellij.openapi.ui.ex.MessagesEx;
 import com.intellij.openapi.util.Disposer;
 import com.intellij.openapi.util.Ref;
-import com.intellij.openapi.util.io.NioFiles;
+import com.intellij.openapi.vfs.LocalFileSystem;
 import com.intellij.openapi.vfs.VFileProperty;
 import com.intellij.openapi.vfs.VfsUtil;
 import com.intellij.openapi.vfs.VirtualFile;
 import com.intellij.openapi.vfs.WritingAccessProvider;
-import com.intellij.psi.*;
+import com.intellij.psi.PsiDirectory;
+import com.intellij.psi.PsiElement;
+import com.intellij.psi.PsiFile;
+import com.intellij.psi.PsiFileSystemItem;
+import com.intellij.psi.PsiInvalidElementAccessException;
+import com.intellij.psi.SmartPointerManager;
+import com.intellij.psi.SmartPsiElementPointer;
 import com.intellij.psi.util.PsiTreeUtil;
 import com.intellij.psi.util.PsiUtilBase;
 import com.intellij.psi.util.PsiUtilCore;
@@ -50,17 +56,16 @@ import com.intellij.util.IncorrectOperationException;
 import com.intellij.util.SmartList;
 import com.intellij.util.containers.ContainerUtil;
 import com.intellij.util.io.ReadOnlyAttributeUtil;
+import com.intellij.util.io.TrashBin;
 import com.intellij.util.ui.IoErrorText;
+import org.jetbrains.annotations.ApiStatus;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 import org.jetbrains.annotations.TestOnly;
 
 import java.io.IOException;
 import java.nio.file.FileSystemException;
-import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.nio.file.attribute.BasicFileAttributes;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
@@ -130,7 +135,7 @@ public final class DeleteHandler {
 
     final PsiElement[] elements = PsiTreeUtil.filterAncestors(elementsToDelete);
 
-    boolean safeDeleteApplicable = ContainerUtil.and(elements, SafeDeleteProcessor::validElement);
+    boolean safeDeleteApplicable = ContainerUtil.all(elements, SafeDeleteProcessor::validElement);
 
     final boolean dumb = DumbService.getInstance(project).isDumb();
     if (safeDeleteApplicable && !dumb) {
@@ -221,7 +226,7 @@ public final class DeleteHandler {
         CommandProcessor.getInstance().markCurrentCommandAsGlobal(project);
       }
 
-      if (ContainerUtil.and(elements, DeleteHandler::isLocalFile)) {
+      if (ContainerUtil.all(elements, DeleteHandler::isLocalFile)) {
         doDeleteFiles(project, elements);
       }
       else {
@@ -235,11 +240,8 @@ public final class DeleteHandler {
   }
 
   private static boolean isLocalFile(PsiElement e) {
-    if (e instanceof PsiFileSystemItem) {
-      VirtualFile file = ((PsiFileSystemItem)e).getVirtualFile();
-      if (file != null && file.isInLocalFileSystem()) return true;
-    }
-    return false;
+    var file = e instanceof PsiFileSystemItem fsItem ? fsItem.getVirtualFile() : null;
+    return file != null && file.isInLocalFileSystem();
   }
 
   private static boolean clearFileReadOnlyFlags(Project project, PsiElement elementToDelete) {
@@ -297,28 +299,29 @@ public final class DeleteHandler {
 
     ApplicationManager.getApplication().runWriteAction(() -> {
       try {
-        element.delete();
+        deleteElementImpl(element);
       }
       catch (IncorrectOperationException e) {
         ApplicationManager.getApplication().invokeLater(
-          () -> Messages.showMessageDialog(project, e.getMessage(), CommonBundle.getErrorTitle(), Messages.getErrorIcon()));
+          () -> Messages.showMessageDialog(project, e.getMessage(), CommonBundle.getErrorTitle(), Messages.getErrorIcon())
+        );
       }
     });
   }
 
   private static void doDeleteFiles(Project project, PsiElement[] fileElements) {
-    for (PsiElement file : fileElements) {
+    for (var file : fileElements) {
       if (!clearFileReadOnlyFlags(project, file)) return;
     }
 
-    LocalFilesDeleteTask task = new LocalFilesDeleteTask(project, fileElements);
+    var task = new LocalFilesDeleteTask(project, fileElements);
     ProgressManager.getInstance().run(task);
     if (task.error != null) {
-      String file = task.error instanceof FileSystemException ? ((FileSystemException)task.error).getFile() : null;
+      var file = task.error instanceof FileSystemException ? ((FileSystemException)task.error).getFile() : null;
       if (file != null) {
         String message = IoErrorText.message(task.error), yes = RevealFileAction.getActionName(), no = CommonBundle.getCloseButtonText();
         if (Messages.showYesNoDialog(project, message, CommonBundle.getErrorTitle(), yes, no, Messages.getErrorIcon()) == Messages.YES) {
-          RevealFileAction.openFile(Paths.get(file));
+          RevealFileAction.openFile(Path.of(file));
         }
       }
       else {
@@ -327,19 +330,6 @@ public final class DeleteHandler {
     }
     if (task.aborted != null) {
       VfsUtil.markDirtyAndRefresh(true, true, false, task.aborted);
-    }
-    if (!task.processed.isEmpty()) {
-      ApplicationManager.getApplication().runWriteAction(() -> {
-        for (PsiElement fileElement : task.processed) {
-          try {
-            fileElement.delete();
-          }
-          catch (IncorrectOperationException e) {
-            ApplicationManager.getApplication().invokeLater(
-              () -> Messages.showMessageDialog(project, e.getMessage(), CommonBundle.getErrorTitle(), Messages.getErrorIcon()));
-          }
-        }
-      });
     }
   }
 
@@ -374,6 +364,29 @@ public final class DeleteHandler {
     return true;
   }
 
+  @ApiStatus.Internal
+  public static void deleteElementImpl(@NotNull PsiElement element) {
+    var virtualFile = (VirtualFile)null;
+    if (TrashBin.isSupported() && GeneralSettings.getInstance().isDeletingToBin()) {
+      try {
+        var psiFile = element.getContainingFile();
+        if (psiFile != null && psiFile.isPhysical()) {
+          virtualFile = psiFile.getVirtualFile();
+          if (TrashBin.canMoveToTrash(virtualFile)) {
+            LocalFileSystem.MOVE_TO_TRASH.set(virtualFile, Boolean.TRUE);
+          }
+        }
+      }
+      catch (PsiInvalidElementAccessException ignored) { }
+    }
+    try {
+      element.delete();
+    }
+    finally {
+      LocalFileSystem.MOVE_TO_TRASH.set(virtualFile, null);
+    }
+  }
+
   @TestOnly
   public static void overrideNeedsConfirmationInTests(boolean needsConfirmation, @NotNull Disposable disposable) {
     ourOverrideNeedsConfirmation = needsConfirmation;
@@ -383,68 +396,56 @@ public final class DeleteHandler {
   private static final class LocalFilesDeleteTask extends Task.Modal {
     private final PsiElement[] myFileElements;
 
-    List<PsiElement> processed = new ArrayList<>();
-    VirtualFile aborted = null;
-    Throwable error = null;
+    private int counter = 0;
+    private VirtualFile aborted = null;
+    private Throwable error = null;
 
-    LocalFilesDeleteTask(Project project, PsiElement[] fileElements) {
+    private LocalFilesDeleteTask(Project project, PsiElement[] fileElements) {
       super(project, IdeBundle.message("progress.deleting"), true);
       myFileElements = fileElements;
     }
 
     @Override
+    @SuppressWarnings("DuplicatedCode")
     public void run(@NotNull ProgressIndicator indicator) {
+      indicator.setIndeterminate(true);
+      var toBin = TrashBin.isSupported() && GeneralSettings.getInstance().isDeletingToBin();
+      var app = ApplicationManager.getApplication();
+
       try {
-        indicator.setText(IdeBundle.message("progress.counting.files"));
-        Ref<Integer> curFileCount = new Ref<>(0);
-        for (PsiElement element : myFileElements) {
-          VirtualFile file = ((PsiFileSystemItem)element).getVirtualFile();
-          Files.walkFileTree(file.toNioPath(), new NioFiles.StatsCollectingVisitor() {
-            @Override
-            protected void countDirectory(Path dir, BasicFileAttributes attrs) {
-              count();
-            }
+        for (var element : myFileElements) {
+          indicator.checkCanceled();
+          indicator.setText(IdeBundle.message("progress.already.deleted", counter));
 
-            @Override
-            protected void countFile(Path file, BasicFileAttributes attrs) {
-              count();
-            }
-
-            private void count() {
-              indicator.checkCanceled();
-              curFileCount.set(curFileCount.get() + 1);
-            }
-          });
-        }
-        final int totalFileCount = curFileCount.get();
-        curFileCount.set(0);
-        indicator.setIndeterminate(totalFileCount <= 1); // don't show progression when deleting single file
-        for (int i = 0; i < myFileElements.length; i++) {
-          PsiElement element = myFileElements[i];
-          if (indicator.isCanceled()) break;
-          indicator.setFraction((double) i / myFileElements.length);
-
-          VirtualFile file = ((PsiFileSystemItem)element).getVirtualFile();
+          var file = ((PsiFileSystemItem)element).getVirtualFile();
           aborted = file;
-          Path path = file.toNioPath();
-          indicator.setText(path.toString());
+
+          if (toBin && TrashBin.canMoveToTrash(file)) {
+            LocalFileSystem.MOVE_TO_TRASH.set(file, Boolean.TRUE);
+            counter++;
+          }
+          else {
+            LocalFileSystem.DELETE_CALLBACK.set(file, p -> {
+              indicator.checkCanceled();
+              indicator.setText(IdeBundle.message("progress.already.deleted", counter));
+              counter++;
+            });
+          }
 
           try {
-            NioFiles.deleteRecursively(path, p -> {
-              curFileCount.set(curFileCount.get() + 1);
-              indicator.checkCanceled();
-              indicator.setFraction((double)curFileCount.get() / totalFileCount);
-              indicator.setText2(path.relativize(p).toString());
-            });
-            processed.add(element);
-            aborted = null;
+            app.runWriteAction(() -> element.delete());
           }
-          catch (ProcessCanceledException ignored) { }
+          finally {
+            LocalFileSystem.MOVE_TO_TRASH.set(file, null);
+            LocalFileSystem.DELETE_CALLBACK.set(file, null);
+          }
+
+          aborted = null;
         }
       }
-      catch (Throwable t) {
-        Logger.getInstance(getClass()).info(t);
-        error = t;
+      catch (IncorrectOperationException e) {
+        Logger.getInstance(getClass()).info(e);
+        error = e.getCause();
       }
     }
   }
