@@ -28,9 +28,54 @@ import com.jetbrains.python.codeInsight.dataflow.scope.Scope;
 import com.jetbrains.python.codeInsight.dataflow.scope.ScopeUtil;
 import com.jetbrains.python.inspections.PyInspectionExtension;
 import com.jetbrains.python.inspections.PyInspectionVisitor;
-import com.jetbrains.python.inspections.quickfix.*;
-import com.jetbrains.python.psi.*;
-import com.jetbrains.python.psi.impl.*;
+import com.jetbrains.python.inspections.quickfix.AddFieldQuickFix;
+import com.jetbrains.python.inspections.quickfix.PyRemoveAssignmentStatementTargetQuickFix;
+import com.jetbrains.python.inspections.quickfix.PyRemoveExceptionTargetQuickFix;
+import com.jetbrains.python.inspections.quickfix.PyRemoveParameterQuickFix;
+import com.jetbrains.python.inspections.quickfix.PyRemoveStatementQuickFix;
+import com.jetbrains.python.inspections.quickfix.PyRemoveTypeParameterQuickFix;
+import com.jetbrains.python.inspections.quickfix.PyRemoveWithTargetQuickFix;
+import com.jetbrains.python.psi.LanguageLevel;
+import com.jetbrains.python.psi.PyAssignmentStatement;
+import com.jetbrains.python.psi.PyAugAssignmentStatement;
+import com.jetbrains.python.psi.PyCallExpression;
+import com.jetbrains.python.psi.PyCallable;
+import com.jetbrains.python.psi.PyClass;
+import com.jetbrains.python.psi.PyComprehensionElement;
+import com.jetbrains.python.psi.PyDocStringOwner;
+import com.jetbrains.python.psi.PyElement;
+import com.jetbrains.python.psi.PyElementGenerator;
+import com.jetbrains.python.psi.PyExceptPart;
+import com.jetbrains.python.psi.PyExpression;
+import com.jetbrains.python.psi.PyExpressionCodeFragment;
+import com.jetbrains.python.psi.PyFile;
+import com.jetbrains.python.psi.PyForStatement;
+import com.jetbrains.python.psi.PyFunction;
+import com.jetbrains.python.psi.PyKnownDecoratorUtil;
+import com.jetbrains.python.psi.PyLambdaExpression;
+import com.jetbrains.python.psi.PyNamedParameter;
+import com.jetbrains.python.psi.PyParameter;
+import com.jetbrains.python.psi.PyParameterList;
+import com.jetbrains.python.psi.PyRecursiveElementVisitor;
+import com.jetbrains.python.psi.PyReferenceExpression;
+import com.jetbrains.python.psi.PySingleStarParameter;
+import com.jetbrains.python.psi.PyStarExpression;
+import com.jetbrains.python.psi.PyStatement;
+import com.jetbrains.python.psi.PyStringLiteralExpression;
+import com.jetbrains.python.psi.PyTargetExpression;
+import com.jetbrains.python.psi.PyTupleExpression;
+import com.jetbrains.python.psi.PyTypeAliasStatement;
+import com.jetbrains.python.psi.PyTypeParameter;
+import com.jetbrains.python.psi.PyTypeParameterList;
+import com.jetbrains.python.psi.PyTypeParameterListOwner;
+import com.jetbrains.python.psi.PyUtil;
+import com.jetbrains.python.psi.PyWithItem;
+import com.jetbrains.python.psi.impl.PyAugAssignmentStatementNavigator;
+import com.jetbrains.python.psi.impl.PyBuiltinCache;
+import com.jetbrains.python.psi.impl.PyExceptPartNavigator;
+import com.jetbrains.python.psi.impl.PyForStatementNavigator;
+import com.jetbrains.python.psi.impl.PyImportStatementNavigator;
+import com.jetbrains.python.psi.impl.PyTypeDeclarationStatementNavigator;
 import com.jetbrains.python.psi.resolve.PyResolveContext;
 import com.jetbrains.python.psi.search.PyOverridingMethodsSearch;
 import com.jetbrains.python.psi.search.PySuperMethodsSearch;
@@ -41,7 +86,13 @@ import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 import org.jetbrains.annotations.Unmodifiable;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.HashMap;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
 
 public final class PyUnusedLocalInspectionVisitor extends PyInspectionVisitor {
@@ -82,7 +133,7 @@ public final class PyUnusedLocalInspectionVisitor extends PyInspectionVisitor {
     if (owner instanceof PyFunction pyFunction && PyiUtil.isOverload(pyFunction, myTypeEvalContext)) {
       return;
     }
-    if (!(owner instanceof PyClass) && !callsLocals(owner)) {
+    if (!callsLocals(owner)) {
       collectAllWrites(owner);
     }
     owner.accept(new PyRecursiveElementVisitor() {
@@ -104,6 +155,10 @@ public final class PyUnusedLocalInspectionVisitor extends PyInspectionVisitor {
       if (typeParameterList != null) {
         scopeWrites.addAll(typeParameterList.getTypeParameters());
       }
+    }
+    if (owner instanceof PyClass) {
+      myScopeWrites.put(owner, Collections.unmodifiableSet(scopeWrites));
+      return;
     }
     final Instruction[] instructions = ControlFlowCache.getControlFlow(owner).getInstructions();
     for (Instruction instruction : instructions) {
@@ -136,7 +191,7 @@ public final class PyUnusedLocalInspectionVisitor extends PyInspectionVisitor {
         if (element == null || !PsiTreeUtil.isAncestor(owner, element, false)) {
           continue;
         }
-        // Ignore arguments of import statement
+        // Ignore arguments of the import statement
         if (PyImportStatementNavigator.getImportStatementByElement(element) != null) {
           continue;
         }
@@ -252,7 +307,7 @@ public final class PyUnusedLocalInspectionVisitor extends PyInspectionVisitor {
                                                               int startInstruction,
                                                               @Nullable PsiElement scopeAnchor) {
     Set<PsiElement> readsFromInstruction = new HashSet<>();
-    // Check if the element is declared out of scope, mark all out of scope write accesses as used
+    // Check if the element is declared out of scope, mark all out-of-scope write accesses as used
     if (scopeAnchor != null) {
       final ScopeOwner declOwner = ScopeUtil.getDeclarationScopeOwner(scopeAnchor, name);
       if (declOwner != null && declOwner != owner) {
@@ -268,7 +323,7 @@ public final class PyUnusedLocalInspectionVisitor extends PyInspectionVisitor {
     }
     ControlFlowUtil.iteratePrev(startInstruction, instructions, inst -> {
       final PsiElement instElement = inst.getElement();
-      // Mark function as used
+      // Mark the function as used
       if (instElement instanceof PyFunction) {
         if (name.equals(((PyFunction)instElement).getName())) {
           readsFromInstruction.add(instElement);
@@ -374,7 +429,7 @@ public final class PyUnusedLocalInspectionVisitor extends PyInspectionVisitor {
                                             ? (PyNamedParameter)element
                                             : (PyNamedParameter)element.getParent();
           name = namedParameter.getName();
-          // When function is inside a class, first parameter may be either self or cls which is always 'used'.
+          // When the function is inside a class, the first parameter may be either self or cls which is always 'used'.
           if (namedParameter.isSelf()) {
             continue;
           }
@@ -559,7 +614,7 @@ public final class PyUnusedLocalInspectionVisitor extends PyInspectionVisitor {
       final PyFile pyFile = (PyFile)PyElementGenerator.getInstance(element.getProject()).createDummyFile(LanguageLevel.getDefault(),
                                                                                                          "for _ in tuples:\n  pass"
       );
-      final PyExpression target = ((PyForStatement)pyFile.getStatements().get(0)).getForPart().getTarget();
+      final PyExpression target = ((PyForStatement)pyFile.getStatements().getFirst()).getForPart().getTarget();
       if (target != null) {
         element.replace(target);
       }
